// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`end-to-end test generates the same code for pet store that it did on the last test run 1`] = `
"routes/pet.ts:import type { addPet } from "../types/paths/pet.types.js";
import type { updatePet } from "../types/paths/pet.types.js";

export const POST: addPet = async ($) => {
  return $.response[200].random();
};

export const PUT: updatePet = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 2`] = `
"types/paths/pet.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { Pet } from "../components/schemas/Pet.js";

export type addPet = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Pet;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type updatePet = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Pet;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 3`] = `
"routes/pet/findByStatus.ts:import type { findPetsByStatus } from "../../types/paths/pet/findByStatus.types.js";

export const GET: findPetsByStatus = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 4`] = `
"types/paths/pet/findByStatus.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Pet } from "../../components/schemas/Pet.js";

export type findPetsByStatus = (
  $: OmitValueWhenNever<{
    query: findPetsByStatus_Query;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Array<Pet>;
          };
          "application/json": {
            schema: Array<Pet>;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Array<Pet>;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<Pet>;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type findPetsByStatus_Query = {
  status?: "available" | "pending" | "sold";
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 5`] = `
"routes/pet/findByTags.ts:import type { findPetsByTags } from "../../types/paths/pet/findByTags.types.js";

export const GET: findPetsByTags = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 6`] = `
"types/paths/pet/findByTags.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Pet } from "../../components/schemas/Pet.js";

export type findPetsByTags = (
  $: OmitValueWhenNever<{
    query: findPetsByTags_Query;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Array<Pet>;
          };
          "application/json": {
            schema: Array<Pet>;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Array<Pet>;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<Pet>;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type findPetsByTags_Query = { tags?: Array<string> };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 7`] = `
"routes/pet/{petId}.ts:import type { getPetById } from "../../types/paths/pet/{petId}.types.js";
import type { updatePetWithForm } from "../../types/paths/pet/{petId}.types.js";
import type { deletePet } from "../../types/paths/pet/{petId}.types.js";

export const GET: getPetById = async ($) => {
  return $.response[200].random();
};

export const POST: updatePetWithForm = async ($) => {
  return $.response[405];
};

export const DELETE: deletePet = async ($) => {
  return $.response[400];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 8`] = `
"types/paths/pet/{petId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Pet } from "../../components/schemas/Pet.js";

export type getPetById = (
  $: OmitValueWhenNever<{
    query: never;
    path: getPetById_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type updatePetWithForm = (
  $: OmitValueWhenNever<{
    query: updatePetWithForm_Query;
    path: updatePetWithForm_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type deletePet = (
  $: OmitValueWhenNever<{
    query: never;
    path: deletePet_Path;
    headers: deletePet_Headers;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getPetById_Path = { petId: number };

export type updatePetWithForm_Query = { name?: string; status?: string };

export type updatePetWithForm_Path = { petId: number };

export type deletePet_Path = { petId: number };

export type deletePet_Headers = { api_key?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 9`] = `
"routes/pet/{petId}/uploadImage.ts:import type { uploadFile } from "../../../types/paths/pet/{petId}/uploadImage.types.js";

export const POST: uploadFile = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 10`] = `
"types/paths/pet/{petId}/uploadImage.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../counterfact-types/index.ts";
import type { ApiResponse } from "../../../components/schemas/ApiResponse.js";

export type uploadFile = (
  $: OmitValueWhenNever<{
    query: uploadFile_Query;
    path: uploadFile_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: ApiResponse;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: ApiResponse;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type uploadFile_Query = { additionalMetadata?: string };

export type uploadFile_Path = { petId: number };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 11`] = `
"routes/store/inventory.ts:import type { getInventory } from "../../types/paths/store/inventory.types.js";

export const GET: getInventory = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 12`] = `
"types/paths/store/inventory.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";

export type getInventory = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: { [key: string]: number };
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: { [key: string]: number };
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 13`] = `
"routes/store/order.ts:import type { placeOrder } from "../../types/paths/store/order.types.js";

export const POST: placeOrder = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 14`] = `
"types/paths/store/order.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { Order } from "../../components/schemas/Order.js";

export type placeOrder = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Order;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Order;
          };
        };
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: Order;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 15`] = `
"routes/store/order/{orderId}.ts:import type { getOrderById } from "../../../types/paths/store/order/{orderId}.types.js";
import type { deleteOrder } from "../../../types/paths/store/order/{orderId}.types.js";

export const GET: getOrderById = async ($) => {
  return $.response[200].random();
};

export const DELETE: deleteOrder = async ($) => {
  return $.response[400];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 16`] = `
"types/paths/store/order/{orderId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../counterfact-types/index.ts";
import type { Order } from "../../../components/schemas/Order.js";

export type getOrderById = (
  $: OmitValueWhenNever<{
    query: never;
    path: getOrderById_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Order;
          };
          "application/json": {
            schema: Order;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Order;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Order;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type deleteOrder = (
  $: OmitValueWhenNever<{
    query: never;
    path: deleteOrder_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getOrderById_Path = { orderId: number };

export type deleteOrder_Path = { orderId: number };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 17`] = `
"routes/user.ts:import type { createUser } from "../types/paths/user.types.js";

export const POST: createUser = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 18`] = `
"types/paths/user.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../counterfact-types/index.ts";
import type { User } from "../components/schemas/User.js";

export type createUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: User;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
          "application/xml": {
            schema: User;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: number | undefined;
      contentType?: "application/xml";
      body?: User;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 19`] = `
"routes/user/createWithList.ts:import type { createUsersWithListInput } from "../../types/paths/user/createWithList.types.js";

export const POST: createUsersWithListInput = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 20`] = `
"types/paths/user/createWithList.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";
import type { User } from "../../components/schemas/User.js";

export type createUsersWithListInput = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Array<User>;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: User;
          };
          "application/json": {
            schema: User;
          };
        };
      };
      [statusCode in Exclude<HttpStatusCode, 200>]: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: User;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 21`] = `
"routes/user/login.ts:import type { loginUser } from "../../types/paths/user/login.types.js";

export const GET: loginUser = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 22`] = `
"types/paths/user/login.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";

export type loginUser = (
  $: OmitValueWhenNever<{
    query: loginUser_Query;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: {
          "X-Rate-Limit": { schema: number };
          "X-Expires-After": { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: string;
          };
          "application/json": {
            schema: string;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: string;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: string;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type loginUser_Query = { username?: string; password?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 23`] = `
"routes/user/logout.ts:import type { logoutUser } from "../../types/paths/user/logout.types.js";

export const GET: logoutUser = async ($) => {
  return $.response[200];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 24`] = `
"types/paths/user/logout.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";

export type logoutUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 25`] = `
"routes/user/{username}.ts:import type { getUserByName } from "../../types/paths/user/{username}.types.js";
import type { updateUser } from "../../types/paths/user/{username}.types.js";
import type { deleteUser } from "../../types/paths/user/{username}.types.js";

export const GET: getUserByName = async ($) => {
  return $.response[200].random();
};

export const PUT: updateUser = async ($) => {
  return $.response[200];
};

export const DELETE: deleteUser = async ($) => {
  return $.response[400];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 26`] = `
"types/paths/user/{username}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";
import type { User } from "../../components/schemas/User.js";

export type getUserByName = (
  $: OmitValueWhenNever<{
    query: never;
    path: getUserByName_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: User;
          };
          "application/json": {
            schema: User;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/xml";
      body?: User;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type updateUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: updateUser_Path;
    headers: never;
    body: User;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type deleteUser = (
  $: OmitValueWhenNever<{
    query: never;
    path: deleteUser_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type getUserByName_Path = { username: string };

export type updateUser_Path = { username: string };

export type deleteUser_Path = { username: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 27`] = `
"types/components/schemas/Pet.ts:import type { Category } from "./Category.js";
import type { Tag } from "./Tag.js";

export type Pet = {
  id?: number;
  name: string;
  category?: Category;
  photoUrls: Array<string>;
  tags?: Array<Tag>;
  status?: "available" | "pending" | "sold";
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 28`] = `
"types/components/schemas/ApiResponse.ts:export type ApiResponse = { code?: number; type?: string; message?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 29`] = `
"types/components/schemas/Order.ts:export type Order = {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  status?: "placed" | "approved" | "delivered";
  complete?: boolean;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 30`] = `
"types/components/schemas/User.ts:export type User = {
  id?: number;
  username?: string;
  firstName?: string;
  lastName?: string;
  email?: string;
  password?: string;
  phone?: string;
  userStatus?: number;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 31`] = `
"types/components/schemas/Category.ts:export type Category = { id?: number; name?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 32`] = `
"types/components/schemas/Tag.ts:export type Tag = { id?: number; name?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 33`] = `
".cache
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 34`] = `
"This directory contains compiled JS files from the paths directory. Do not edit these files directly.
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 1`] = `
"routes/index.ts:import type { HTTP_GET } from "../types/paths/index.types.js";

export const GET: HTTP_GET = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 2`] = `
"types/paths/index.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../counterfact-types/index.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "text/plain": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "text/plain";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 3`] = `
"routes/count.ts:import type { HTTP_GET } from "../types/paths/count.types.js";

export const GET: HTTP_GET = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 4`] = `
"types/paths/count.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../counterfact-types/index.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 5`] = `
"routes/hello/kitty.ts:import type { HTTP_GET } from "../../types/paths/hello/kitty.types.js";

export const GET: HTTP_GET = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 6`] = `
"types/paths/hello/kitty.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 7`] = `
"routes/hello/{name}.ts:import type { HTTP_GET } from "../../types/paths/hello/{name}.types.js";

export const GET: HTTP_GET = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 8`] = `
"types/paths/hello/{name}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../counterfact-types/index.ts";
import type { HttpStatusCode } from "../../../counterfact-types/index.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: HTTP_GET_Path;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: {
          "x-test": { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;

export type HTTP_GET_Path = { name: string };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 9`] = `
"routes/path-one.ts:import type { HTTP_GET } from "../types/paths/path-one.types.js";

export const GET: HTTP_GET = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 10`] = `
"types/paths/path-one.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../counterfact-types/index.ts";
import type { MaybePromise } from "../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../counterfact-types/index.ts";
import type { Recursive } from "../components/schemas/Recursive.js";
import type { BadRequest } from "../#/components/responses/BadRequest.js";
import type { Error } from "../components/schemas/Error.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Recursive;
          };
        };
      };
      400: BadRequest;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: Recursive;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 11`] = `
"routes/weird/path/with:colon.ts:import type { HTTP_GET } from "../../../types/paths/weird/path/with:colon.types.js";

export const GET: HTTP_GET = async ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 12`] = `
"types/paths/weird/path/with:colon.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../../counterfact-types/index.ts";
import type { OmitValueWhenNever } from "../../../../counterfact-types/index.ts";
import type { MaybePromise } from "../../../../counterfact-types/index.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../counterfact-types/index.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../counterfact-types/index.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
    delay: (milliseconds: number, maxMilliseconds?: number) => Promise<void>;
  }>,
) => MaybePromise<
  | {
      status: 200;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE }
>;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 13`] = `
"types/components/schemas/Recursive.ts:import type { Recursive } from "./Recursive.js";

export type Recursive = Recursive;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 14`] = `
"types/#/components/responses/BadRequest.ts:import type { Error } from "../../../components/schemas/Error.js";

export type BadRequest = {
  headers: never;
  requiredHeaders: never;
  content: {
    "application/json": {
      schema: Error;
    };
  };
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 15`] = `
"types/components/schemas/Error.ts:export type Error = { code?: string; message: string };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 16`] = `
".cache
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 17`] = `
"This directory contains compiled JS files from the paths directory. Do not edit these files directly.
"
`;
